compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__invalid_type_parameter_name.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 1352
expression: "record Wrapper<innerType> {}"
---
error: Invalid type variable name
  ┌─ /src/one/two.rakun:1:16
  │
1 │ record Wrapper<innerType> {}
  │                ^^^^^^^^^ This is not a valid type variable name

Hint: Type Variable names start with a lowercase letter and contain a-z, 0-
9, or _.
Try: inner_type
